...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_daily_steps_prompt"
        app:layout_constraintBottom_toTopOf="@id/tv_daily_distance_prompt"/>

    <TextView
        android:id="@+id/tv_daily_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/home_txt_size"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
        android:background="@color/colorPrimary"
        android:contentDescription="@string/daily_distance_background"
        app:srcCompat="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_distance_prompt"
        app:layout_constraintBottom_toTopOf="@id/btn_start_walk"/>

    <TextView
        android:id="@+id/tv_daily_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/home_txt_size"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_walk"
        app:layout_constraintBottom_toTopOf="@id/tv_recent_steps_prompt"/>

    <Button
        android:id="@+id/btn_mock_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_btn_text"
        android:layout_marginStart="@dimen/mock_btn_margin"
        app:layout_constraintLeft_toRightOf="@+id/tv_recent_walk_prompt"
        app:layout_constraintTop_toBottomOf="@id/btn_start_walk"
...
